<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cover"
                android:scaleType="centerCrop"
                android:contentDescription="@string/img_illustration"/>

            <TextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#BFFFFFFF"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/app_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/register_desc"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:hint="@string/lbl_name"
                    android:inputType="textCapSentences"
                    android:layout_marginBottom="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0">
                <com.example.ai_submission.views.EmailET
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:hint="@string/lbl_email"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0">
                <com.example.ai_submission.views.PasswordET
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:hint="@string/lbl_password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:alpha="0" />

            <Button
                android:id="@+id/btnMoveToLogin"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:alpha="0" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>